Разделила на 2 сущности BuildConfigSteps и BuildSteps